--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
         <!-- Навигационное меню -->
         <nav class="navbar">
             <ul class="nav-list">
-                <li class="nav-item"><a href="главная.html" class="active">Главная</a></li>
-                <li class="nav-item"><a href="новости.html">Новости</a></li>
-                <li class="nav-item"><a href="разраб.html">Разработчики</a></li>
-                <li class="nav-item"><a href="история.html">История</a></li>
-                <li class="nav-item"><a href="моды.html">Моды</a></li>
+                <li class="nav-item"><a href="index.html" class="active">Главная</a></li>
+                <li class="nav-item"><a href="news.html">Новости</a></li>
+                <li class="nav-item"><a href="razrab.html">Разработчики</a></li>
+                <li class="nav-item"><a href="history.html">История</a></li>
+                <li class="nav-item"><a href="mods.html">Моды</a></li>
             </ul>
         </nav>
         
@@ -167,11 +167,11 @@
             <h2>Первая и последняя версии Minecraft</h2>
             <div class="version-comparison">
                 <div class="version">
-                    <img src="res/старая версия.webp" alt="Старая версия Minecraft">
+                    <img src="res/ctara.webp" alt="Старая версия Minecraft">
                     <p>Классическая версия (Alpha)</p>
                 </div>
                 <div class="version">
-                    <img src="res/новая версия.jpg" alt="Новая версия Minecraft">
+                    <img src="res/nib.jpg" alt="Новая версия Minecraft">
                     <p>Современная версия (1.20+)</p>
                 </div>
             </div>
