--- a/news.html
+++ b/news.html
@@ -159,11 +159,11 @@
         <!-- Навигационное меню -->
         <nav class="navbar">
             <ul class="nav-list">
-                <li class="nav-item"><a href="главная.html">Главная</a></li>
-                <li class="nav-item"><a href="новости.html" class="active">Новости</a></li>
-                <li class="nav-item"><a href="разраб.html">Разработчики</a></li>
-                <li class="nav-item"><a href="история.html">История</a></li>
-                <li class="nav-item"><a href="моды.html">Моды</a></li>
+                <li class="nav-item"><a href="index.html">Главная</a></li>
+                <li class="nav-item"><a href="news.html" class="active">Новости</a></li>
+                <li class="nav-item"><a href="razrab.html">Разработчики</a></li>
+                <li class="nav-item"><a href="history.html">История</a></li>
+                <li class="nav-item"><a href="mods.html">Моды</a></li>
             </ul>
         </nav>
         
